--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
+    "next-seo": "^5.5.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
