--- a/.env.local.example
+++ b/.env.local.example
@@ -6,3 +6,6 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+GOOGLE_ID=
+GOOGLE_SECRET=
+NEXTAUTH_SECRET="only in prod"
