--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@next-auth/firebase-adapter": "^1.0.1",
     "@reduxjs/toolkit": "^1.8.5",
     "classnames": "^2.3.2",
     "firebase": "^9.6.1",
     "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
+    "next-auth": "^4.12.0",
     "next-redux-wrapper": "^8.0.0",
     "next-seo": "^5.5.0",
     "nextjs-progressbar": "^0.0.14",
