refactor: firebase exporting

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,4 +8,5 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 GOOGLE_ID=
 GOOGLE_SECRET=
-NEXTAUTH_SECRET="only in prod"
+NEXTAUTH_URL=http://localhost:3000 # not necessary on vercel
+NEXTAUTH_SECRET= # only in prod
