--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@next-auth/firebase-adapter": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "classnames": "^2.3.2",
     "firebase": "^9.10.0",
     "lodash.debounce": "^4.0.8",
@@ -19,6 +20,7 @@
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable": "^7.0.0",
     "react-waypoint": "^10.3.0",
     "slugify": "^1.6.4",
     "swr": "^1.3.0"
